Made enxio run with jdk21